--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -2,7 +2,7 @@ book_filename: "Course_Name"
 chapter_name: "Chapter "
 repo: https://github.com/jhudsl/AnVIL_Template/
 rmd_files: ["index.Rmd",
-            "01-intro.Rmd",
+            "02-student_instructions.Rmd",
             "About.Rmd",
             "References.Rmd"]
 new_session: yes
