--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -5,7 +5,7 @@ rmd_files: ["index.Rmd",
             "01-instructor_guide.Rmd",
             "01-student_setup.Rmd",
             "student_setup_AnVIL.Rmd",
-            "02-student_instructions.Rmd",
+            "02-introduction.Rmd",
             "03-exercises.Rmd",
             "exercises_swirl_01_04_05_06_12.Rmd",
             "04-dataset_exploration.Rmd",
