--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -3,6 +3,7 @@ chapter_name: "Chapter "
 repo: https://github.com/jhudsl/AnVIL_Template/
 rmd_files: ["index.Rmd",
             "01-instructor_guide.Rmd",
+            "instructor_setup_AnVIL.Rmd",
             "02-student_instructions.Rmd",
             "03-exercises.Rmd",
             "exercises_swirl_01_04_05_06_12.Rmd",
