--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -4,7 +4,7 @@ name: Pull Request
 
 on:
   pull_request:
-    branches: [ main, staging, learning-objectives ]
+    branches: [ main, staging ]
 
 jobs:
 
