--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -2,15 +2,12 @@ book_filename: "Course_Name"
 chapter_name: "Chapter "
 repo: https://github.com/jhudsl/AnVIL_Template/
 rmd_files: ["index.Rmd",
-            "01-instructor_guide.Rmd",
-            "02-student_setup.Rmd",
-            "student_setup_AnVIL.Rmd",
-            "03-exercises.Rmd",
-            "introduction.Rmd",
-            "exercises_swirl_01_04_05_06_12.Rmd",
-            "dataset-us_contagious_diseases.Rmd",
-            "05-wrapup.Rmd",
-            "wrapup-AnVIL.Rmd",
+            "part-01-exercises.Rmd",
+            "02-introduction.Rmd",
+            "03-student_setup.Rmd",
+            "04-exercises_swirl_01_04_05_06_12.Rmd",
+            "05-dataset-us_contagious_diseases.Rmd",
+            "06-wrapup.Rmd",
             "About.Rmd",
             "References.Rmd"]
 new_session: yes
