--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -5,11 +5,14 @@ rmd_files: ["index.Rmd",
             "part-01-exercises.Rmd",
             "02-introduction.Rmd",
             "03-student_setup.Rmd",
+            "student_setup_AnVIL.Rmd",
+            "RStudio_AnVIL.Rmd",
             "04-exercises_swirl_01_04_05_06_12.Rmd",
             "05-dataset-us_contagious_diseases.Rmd",
             "06-wrapup.Rmd",
             "part-appendix.Rmd",
-            "prelab_setup_AnVIL.Rmd",
+            "prelab_setup.Rmd",
+            "student_setup_AnVIL.Rmd",
             "About.Rmd",
             "References.Rmd"]
 new_session: yes
