--- a/_output.yml
+++ b/_output.yml
@@ -2,7 +2,8 @@ bookdown::gitbook:
   # When using multiple css files, the default file path will be the first one #
   css: [assets/style.css, assets/GDSCN_style/gdscn.css]
   includes:
-    before_body: [GA_Script.Rhtml, assets/GDSCN_style/big-image_gdscn.html]
+    in_header: GA_Script.html
+    before_body: assets/GDSCN_style/big-image_gdscn.html
     after_body: assets/GDSCN_style/footer.html
   highlight: tango
   config:
