--- a/config_automation.yml
+++ b/config_automation.yml
@@ -25,6 +25,10 @@ render-website: rmd
 render-leanpub: yes
 render-coursera: no
 
+## Automate the creation of Book.txt file? yes/no
+## This is only relevant if render-leanpub is yes, otherwise it will be ignored
+make-book-txt: yes
+
 ##### Rendering of student guide (if applicable)
 render-student-guide: no
 
