🔄 Synced local 'config_automation.yml' with remote 'config_automation.yml'
release-null

--- a/config_automation.yml
+++ b/config_automation.yml
@@ -1,7 +1,7 @@
 
 ##### Checks run at pull request #####
 # Check quiz formatting
-check-quizzes: yes
+check-quizzes: no
 # Check that urls in the content are not broken
 url-checker: yes
 # Render preview of content with changes (Rmd's and md's are checked)
@@ -22,7 +22,7 @@ url-check-periodically: yes
 ##### Renderings run upon merge to main branch #####
 # Rendering each platform's content
 render-website: rmd
-render-leanpub: yes
+render-leanpub: no
 render-coursera: no
 
 ## Automate the creation of Book.txt file? yes/no
@@ -30,7 +30,7 @@ render-coursera: no
 make-book-txt: yes
 
 ##### Rendering of student guide (if applicable)
-render-student-guide: no
+render-student-guide: yes
 
 ##### Auto-generate a feedback link for the AnVIL Feedback Form: https://docs.google.com/forms/d/e/1FAIpQLScrDVb_utm55pmb_SHx-RgELTEbCCWdLea0T3IzS0Oj00GE4w/viewform
 feedback-link: yes
