--- a/config_automation.yml
+++ b/config_automation.yml
@@ -1,7 +1,7 @@
 
 ##### Checks run at pull request #####
 # Check quiz formatting
-check-quizzes: no
+check-quizzes: yes
 # Check that urls in the content are not broken
 url-checker: yes
 # Render preview of content with changes (Rmd's and md's are checked)
@@ -22,7 +22,7 @@ url-check-periodically: yes
 ##### Renderings run upon merge to main branch #####
 # Rendering each platform's content
 render-website: rmd
-render-leanpub: no
+render-leanpub: yes
 render-coursera: no
 
 ## Automate the creation of Book.txt file? yes/no
